--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     </header>
     <nav role="navigation">
         <ul>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="all-donations">All money</a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="all-donations"> <p class=zoom> All money</p></a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-money-source">The public's purse</a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-money-source"> <p class=zoom> The public's purse</p></a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-party">Split by party</a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-party"> <p class=zoom> Split by party</p></a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type">Split by type of donor</a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor</p></a>
             </li>
         </ul>
     </nav>
@@ -222,11 +222,11 @@
     transition: all .3s ease-out;
 }
 .zoom:hover {
-    -moz-transform: scale(1.6);
-    -webkit-transform: scale(1.6);
-    -o-transform: scale(1.6);
-    transform: scale(1.6);
-    -ms-transform: scale(1.6);
+    -moz-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    transform: scale(1.5);
+    -ms-transform: scale(1.5);
     filter: progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=2, M12=-0, M21=0, M22=2);
 }
 </style>    
