--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             </li>
             <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor</p></a>
             </li>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount</p></a>
+            </li>
         </ul>
     </nav>
 
@@ -214,7 +216,7 @@
     <script src="chart.js"></script>
 </body>
 
-<style type="text/css"> /*zoom function*/    
+<style type="text/css">    
 .zoom {
     -webkit-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
