--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
         <!-- End public or private money -->
 
         <div id="view-party-type">
-            <h3 class=zoom>Income for each party from private sources.</h3>
+            <h3 class=zoom2>Income for each party from private sources.</h3>
             <div id="conservative">
                 <h5 class=zoom>Conservative Party</h5>
-                <strong class=zoom>Total: &#163;43.7 million
-                    </strong>
+                <p class=zoom> <strong>Total: &#163;43.7 million 
+                    </strong> </p>
                         <p class=zoom>Top 50 donors gave:
                             <strong>&#163;23,329,828</strong>
                             <br>
@@ -137,8 +137,8 @@
             </div>
             <div id="labour">
                 <h5 class=zoom>Labour Party</h5>
-                <strong class=zoom>Total: &#163;38.9 million
-                    </strong>
+                <p class=zoom> <strong>Total: &#163;38.9 million
+                    </strong> </p>
                         <p class=zoom>Top 50 donors gave:
                             <strong>&#163;39,196,684</strong>
                             <br>
@@ -149,9 +149,9 @@
                             <strong>81%</strong>of the total</p>
             </div>
             <div id="libdem">
-                <h5 class=zoom>Liberal Democrats</h5>
-                <strong class=zoom>Total: &#163;7.1 million
-                    </strong>
+                <h5 class=zoom2>Liberal Democrats</h5>
+                <p class=zoom> <strong>Total: &#163;7.1 million </strong> </p>
+                    
                         <p class=zoom>Top 50 donors gave:
                             <strong>&#163;6,975,973</strong>
                             <br>
@@ -161,50 +161,51 @@
                             <br>
                             <strong>43%</strong>of the total</p>
             </div>
-        </div>
+        </div>    
         <div id="view-donor-type">
             <div id="individual">
                 <h5 class=zoom>Individuals</h5>
-                <strong class=zoom>Total: &#163; 35,191,222
-                    </strong>
+                <p class=zoom> <strong>Total: &#163; 35,191,222
+                    </strong> </p>
                         <p class=zoom>Proportion of all donations:
                             <strong>39%</strong>
                         </p>
             </div>
             <div id="company">
                 <h5 class=zoom>Companies</h5>
-                <strong class=zoom>Total: &#163; 17,052,129
-                    </strong>
+                <p class=zoom> <strong>Total: &#163; 17,052,129
+                    </strong> </p>
                         <p class=zoom>Proportion of all donations:
                             <strong>19%</strong>
                         </p>
             </div>
             <div id="union">
                 <h5 class=zoom>Trade Unions</h5>
-                <strong class=zoom>Total: &#163;31,474,649
-                    </strong>
+                <p class=zoom> <strong>Total: &#163;31,474,649
+                    </strong> </p>
                         <p class=zoom>Proportion of all donations:
                             <strong>35%</strong>
                         </p>
             </div>
             <div id="society">
-                <h5 class=zoom>Societies</h5>
-                <strong class=zoom>Total: &#163;4,550,129
-                    </strong>
-                        <p class=zoom>Proportion of all donations:
+                <h5 class=zoom2>Societies</h5>
+                <p class=zoom2> <strong>Total: &#163;4,550,129
+                    </strong> </p>
+                        <p class=zoom2>Proportion of all donations:
                             <strong>5%</strong>
                         </p>
             </div>
             <div id="other">
-                <h5 class=zoom>Others</h5>
-                <strong  class=zoom>Total: &#163; 1,484,395
-                    </strong>
-                        <p class=zoom>Proportion of all donations:
+                <h5 class=zoom2>Others</h5>
+                <p class=zoom2> <strong>Total: &#163; 1,484,395
+                    </strong> </p>
+                        <p class=zoom2>Proportion of all donations:
                             <strong>2%</strong>
                         </p>
             </div>
-        </div>
-        <div id="view-amount-type">  
+         </div>  
+           <!--paradoteo3: The view/appearance of the new split by-->
+         <div id="view-amount-type">  
               <div id="amount4">
                  <h2 class=zoom>Amount of donation</h2>
               </div>   
@@ -212,14 +213,15 @@
                   <h5 class=zoom> Up to 100.000 Pounds </h5>
              </div>
              <div id="amount2">
-                 <h5 class=zoom> Up to 500.000 Pounds </h5>
+                 <h5 class=zoom> Up to 500.000Pounds </h5>
              </div>
              <div id="amount3">    
                  <h5 class=zoom> Up to 20.000.000 Pounds </h5>
              </div> 
         </div>       
     </div>
-    <div id="chart"></div>
+
+<div id="chart"></div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
