--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-44807543-1']);
     _gaq.push(['_trackPageview']);
-
     (function() {
         var ga = document.createElement('script');
         ga.type = 'text/javascript';
@@ -51,8 +50,6 @@
             <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-party"> <p class=zoom> Split by party</p></a>
             </li>
             <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor</p></a>
-            </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount</p></a>
             </li>
         </ul>
     </nav>
@@ -121,11 +118,11 @@
         <!-- End public or private money -->
 
         <div id="view-party-type">
-            <h3 class=zoom2>Income for each party from private sources.</h3>
+            <h3 class=zoom>Income for each party from private sources.</h3>
             <div id="conservative">
                 <h5 class=zoom>Conservative Party</h5>
-                <p class=zoom> <strong>Total: &#163;43.7 million 
-                    </strong> </p>
+                <strong class=zoom>Total: &#163;43.7 million
+                    </strong>
                         <p class=zoom>Top 50 donors gave:
                             <strong>&#163;23,329,828</strong>
                             <br>
@@ -137,8 +134,8 @@
             </div>
             <div id="labour">
                 <h5 class=zoom>Labour Party</h5>
-                <p class=zoom> <strong>Total: &#163;38.9 million
-                    </strong> </p>
+                <strong class=zoom>Total: &#163;38.9 million
+                    </strong>
                         <p class=zoom>Top 50 donors gave:
                             <strong>&#163;39,196,684</strong>
                             <br>
@@ -149,9 +146,9 @@
                             <strong>81%</strong>of the total</p>
             </div>
             <div id="libdem">
-                <h5 class=zoom2>Liberal Democrats</h5>
-                <p class=zoom> <strong>Total: &#163;7.1 million </strong> </p>
-                    
+                <h5 class=zoom>Liberal Democrats</h5>
+                <strong class=zoom>Total: &#163;7.1 million
+                    </strong>
                         <p class=zoom>Top 50 donors gave:
                             <strong>&#163;6,975,973</strong>
                             <br>
@@ -161,67 +158,52 @@
                             <br>
                             <strong>43%</strong>of the total</p>
             </div>
-        </div>    
+        </div>
         <div id="view-donor-type">
             <div id="individual">
                 <h5 class=zoom>Individuals</h5>
-                <p class=zoom> <strong>Total: &#163; 35,191,222
-                    </strong> </p>
+                <strong class=zoom>Total: &#163; 35,191,222
+                    </strong>
                         <p class=zoom>Proportion of all donations:
                             <strong>39%</strong>
                         </p>
             </div>
             <div id="company">
                 <h5 class=zoom>Companies</h5>
-                <p class=zoom> <strong>Total: &#163; 17,052,129
-                    </strong> </p>
+                <strong class=zoom>Total: &#163; 17,052,129
+                    </strong>
                         <p class=zoom>Proportion of all donations:
                             <strong>19%</strong>
                         </p>
             </div>
             <div id="union">
                 <h5 class=zoom>Trade Unions</h5>
-                <p class=zoom> <strong>Total: &#163;31,474,649
-                    </strong> </p>
+                <strong class=zoom>Total: &#163;31,474,649
+                    </strong>
                         <p class=zoom>Proportion of all donations:
                             <strong>35%</strong>
                         </p>
             </div>
             <div id="society">
-                <h5 class=zoom2>Societies</h5>
-                <p class=zoom2> <strong>Total: &#163;4,550,129
-                    </strong> </p>
-                        <p class=zoom2>Proportion of all donations:
+                <h5 class=zoom>Societies</h5>
+                <strong class=zoom>Total: &#163;4,550,129
+                    </strong>
+                        <p class=zoom>Proportion of all donations:
                             <strong>5%</strong>
                         </p>
             </div>
             <div id="other">
-                <h5 class=zoom2>Others</h5>
-                <p class=zoom2> <strong>Total: &#163; 1,484,395
-                    </strong> </p>
-                        <p class=zoom2>Proportion of all donations:
+                <h5 class=zoom>Others</h5>
+                <strong  class=zoom>Total: &#163; 1,484,395
+                    </strong>
+                        <p class=zoom>Proportion of all donations:
                             <strong>2%</strong>
                         </p>
             </div>
-         </div>  
-           <!--paradoteo3: The view/appearance of the new split by-->
-         <div id="view-amount-type">  
-              <div id="amount4">
-                 <h2 class=zoom>Amount of donation</h2>
-              </div>   
-              <div id="amount1">
-                  <h5 class=zoom> Up to 100.000 Pounds </h5>
-             </div>
-             <div id="amount2">
-                 <h5 class=zoom> Up to 500.000Pounds </h5>
-             </div>
-             <div id="amount3">    
-                 <h5 class=zoom> Up to 20.000.000 Pounds </h5>
-             </div> 
-        </div>       
+        </div>
     </div>
+    <div id="chart"></div>
 
-<div id="chart"></div>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
@@ -231,7 +213,7 @@
     <script src="chart.js"></script>
 </body>
 
-<style type="text/css">    
+<style type="text/css"> /*zoom function*/    
 .zoom {
     -webkit-transition: all .3s ease-out;
     -moz-transition: all .3s ease-out;
