--- a/index.html
+++ b/index.html
@@ -201,10 +201,25 @@
                         <p class=zoom>Proportion of all donations:
                             <strong>2%</strong>
                         </p>
-            </div>
-        </div>
+             </div>
+         </div>
+         <div id="view-amount-type">  
+              <div id="amount4">
+                 <h2 class=zoom>Amount of donation</h2>
+              </div>   
+              <div id="amount1">
+                  <h5 class=zoom> Up to 100.000 Pounds </h5>
+             </div>
+             <div id="amount2">
+                 <h5 class=zoom> Up to 500.000 Pounds </h5>
+             </div>
+             <div id="amount3">    
+                 <h5 class=zoom> Up to 20.000.000 Pounds </h5>
+             </div> 
+        </div>       
     </div>
-    <div id="chart"></div>
+
+<div id="chart"></div>
 
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
