--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         </p>
              </div>
          </div>
-         <div id="view-amount-type">  
+         <!--<div id="view-amount-type">  
               <div id="amount4">
                  <h2 class=zoom>Amount of donation</h2>
               </div>   
@@ -216,7 +216,7 @@
              <div id="amount3">    
                  <h5 class=zoom> Up to 20.000.000 Pounds </h5>
              </div> 
-        </div>       
+        </div>-->       
     </div>
 
 <div id="chart"></div>
