--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             </li>
             <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor </p> </a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount </p> </a>
-            </li>
+            <!--<li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount </p> </a>
+            </li>-->
         </ul>
     </nav>
 
@@ -203,20 +203,7 @@
                         </p>
              </div>
          </div>
-         <!--<div id="view-amount-type">  
-              <div id="amount4">
-                 <h2 class=zoom>Amount of donation</h2>
-              </div>   
-              <div id="amount1">
-                  <h5 class=zoom> Up to 100.000 Pounds </h5>
-             </div>
-             <div id="amount2">
-                 <h5 class=zoom> Up to 500.000 Pounds </h5>
-             </div>
-             <div id="amount3">    
-                 <h5 class=zoom> Up to 20.000.000 Pounds </h5>
-             </div> 
-        </div>-->       
+        
     </div>
 
 <div id="chart"></div>
