--- a/index.html
+++ b/index.html
@@ -206,16 +206,16 @@
         </div>
         <div id="view-amount-type">  
               <div id="amount4">
-                 <h2 class=zoom>Amount of donation</h2>
+                 <h2>Amount of donation</h2>
               </div>   
               <div id="amount1">
-                  <h5 class=zoom> Up to 50.000 British Pounds </h5>
+                  <h5> Up to 100.000 Pounds </h5>
              </div>
              <div id="amount2">
-                 <h5 class=zoom> Up to 350.000 British Pounds </h5>
+                 <h5> Up to 500.000 Pounds </h5>
              </div>
              <div id="amount3">    
-                 <h5 class=zoom> Up to 20.000.000 British Pounds </h5>
+                 <h5> Up to 20.000.000 Pounds </h5>
              </div> 
         </div>
     </div>
