--- a/index.html
+++ b/index.html
@@ -204,19 +204,16 @@
                         </p>
             </div>
         </div>
-        <div id="view-amount-type">  
-              <div id="amount4">
-                 <h2 class=zoom>Amount of donation</h2>
-              </div>   
-              <div id="amount1">
-                  <h5 class=zoom> Up to 100.000 Pounds </h5>
-             </div>
-             <div id="amount2">
-                 <h5 class=zoom> Up to 500.000 Pounds </h5>
-             </div>
-             <div id="amount3">    
-                 <h5 class=zoom> Up to 20.000.000 Pounds </h5>
-             </div> 
+        <div id = "view-by-amount">
+         <div id="enormous">
+                <h5 class=zoom> Amounts less than 20.000.000 pounds </h5>
+           </div>  
+        <div id="huge">
+                <h5 class=zoom> Amounts less than 500.000 pounds </h5>
+         </div>
+         <div id="large">
+               <h5 class=zoom> Amounts less than 100.000 pounds </h5>
+         </div>
         </div>
     </div>
     <div id="chart"></div>
