--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </p>
             </div>
         </div>
-        <div id = "view-by-amount">
+        <!--<div id = "view-by-amount">
          <div id="enormous">
                 <h5 class=zoom> Amounts less than 20.000.000 pounds </h5>
            </div>  
@@ -214,7 +214,7 @@
          <div id="large">
                <h5 class=zoom> Amounts less than 100.000 pounds </h5>
          </div>
-        </div>
+        </div>-->
     </div>
     <div id="chart"></div>
 
