--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </li>
             <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor </p> </a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount </p> </a>
-            </li>
+            <!--<li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount </p> </a>
+            </li>-->
         </ul>
     </nav>
 
