--- a/index.html
+++ b/index.html
@@ -40,20 +40,18 @@
 <body>
 
     <header role="banner" id="title">
-        <h1 class=zoom>Who's funding the big three?</h1>
+        <h1>Who's funding the big three?</h1>
     </header>
     <nav role="navigation">
         <ul>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="all-donations"> <p class=zoom> All money </p> </a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="all-donations">All money</a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-money-source"> <p class=zoom> The public's purse </p> </a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-money-source">The public's purse</a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-party"> <p class=zoom> Split by party </p> </a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-party">Split by party</a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor </p> </a>
+            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type">Split by type of donor</a>
             </li>
-            <!--<li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by amount </p> </a>
-            </li>-->
         </ul>
     </nav>
 
@@ -61,33 +59,33 @@
 
         <!-- Initial annotations -->
         <div id="initial-content">
-            <h2 class=zoom>Political donations and funding accepted by the Conservatives, Labour and Liberal Democrats between the 2010 general election and August 2013, when this data was collected.</h2>
-            <p class=zoom>Each circle represents the total amount donated by a single donor group, funding organisation or individual during that period.</p>
-            <p class=zoom>Hover over a circle to show further information.</p>
+            <h2>Political donations and funding accepted by the Conservatives, Labour and Liberal Democrats between the 2010 general election and August 2013, when this data was collected.</h2>
+            <p>Each circle represents the total amount donated by a single donor group, funding organisation or individual during that period.</p>
+            <p>Hover over a circle to show further information.</p>
 
-            <p class=zoom>Get an immediate overview of how party funding is shaped in Britain today by selecting one of the options at the top of the page.</p>
-            <p class=zoom>Data is based on all reportable donations over &#163;7500.</p>
-            <p class=zoom>Data source: <a href="http://www.electoralcommission.org.uk/">The Electoral Commission.</a>
+            <p>Get an immediate overview of how party funding is shaped in Britain today by selecting one of the options at the top of the page.</p>
+            <p>Data is based on all reportable donations over &#163;7500.</p>
+            <p>Data source: <a href="http://www.electoralcommission.org.uk/">The Electoral Commission.</a>
             </p>
         </div>
         <div id="value-scale">
             <div id="f">
-                <p class=zoom>&#8212;UK average salary</p>
+                <p>&#8212;UK average salary</p>
             </div>
             <div id="a">
-                <strong class=zoom>&#163;25k &#8212;</strong>
+                <strong>&#163;25k &#8212;</strong>
             </div>
             <div id="b">
-                <strong class=zoom>&#163;50k &#8212;</strong>
+                <strong>&#163;50k &#8212;</strong>
             </div>
             <div id="c">
-                <strong class=zoom>&#163;100k &#8212;</strong>
+                <strong>&#163;100k &#8212;</strong>
             </div>
             <div id="d">
-                <strong class=zoom>&#163;500k &#8212;</strong>
+                <strong>&#163;500k &#8212;</strong>
             </div>
             <div id="e">
-                <strong class=zoom>&#163;1m &#8212;</strong>
+                <strong>&#163;1m &#8212;</strong>
             </div>
         </div>
         <!-- End initial-->
@@ -95,24 +93,24 @@
         <!-- Public or private money annotations -->
         <div id="view-source-type">
             <div id="public-or-private-money" class="public-private">
-                <h3 class=zoom>Public money vs private cash</h3>
-                <p class=zoom>Despite general public opposition to more taxpayer money being given to political parties, public funds are already provided to opposition parties in the form of 'short money' from the House of Commons, House of Lords and Scottish Parliament.</p>
-                <p class=zoom>The parties also benefit from 'Policy development grants' given by the Electoral Commission.</p>
+                <h3>Public money vs private cash</h3>
+                <p>Despite general public opposition to more taxpayer money being given to political parties, public funds are already provided to opposition parties in the form of 'short money' from the House of Commons, House of Lords and Scottish Parliament.</p>
+                <p>The parties also benefit from 'Policy development grants' given by the Electoral Commission.</p>
             </div>
             <div id="public-or-private-money-split" class="public-private">
                 <div id="private-money">
-                    <h5 class=zoom>Private Donations</h5>
-                    <strong class=zoom>Total: &#163;89,752,524
+                    <h5>Private Donations</h5>
+                    <strong>Total: &#163;89,752,524
                         </strong>
-                            <p class=zoom>Proportion of all donations:
+                            <p>Proportion of all donations:
                                 <strong>77%</strong>
                             </p>
                 </div>
                 <div id="public-money">
-                    <h5 class=zoom>Public Funds</h5>
-                    <strong class=zoom>Total: &#163;26,579,038
+                    <h5>Public Funds</h5>
+                    <strong>Total: &#163;26,579,038
                         </strong>
-                            <p class=zoom>Proportion of all donations:
+                            <p>Proportion of all donations:
                                 <strong>23%</strong>
                             </p>
                 </div>
@@ -121,12 +119,12 @@
         <!-- End public or private money -->
 
         <div id="view-party-type">
-            <h3 class=zoom>Income for each party from private sources.</h3>
+            <h3>Income for each party from private sources.</h3>
             <div id="conservative">
-                <h5 class=zoom>Conservative Party</h5>
-                <strong class=zoom>Total: &#163;43.7 million
+                <h5>Conservative Party</h5>
+                <strong>Total: &#163;43.7 million
                     </strong>
-                        <p class=zoom>Top 50 donors gave:
+                        <p>Top 50 donors gave:
                             <strong>&#163;23,329,828</strong>
                             <br>
                             <strong>50%</strong>of the total.</p>
@@ -136,27 +134,27 @@
                             <strong>27%</strong>of the total</p>
             </div>
             <div id="labour">
-                <h5 class=zoom>Labour Party</h5>
-                <strong class=zoom>Total: &#163;38.9 million
+                <h5>Labour Party</h5>
+                <strong>Total: &#163;38.9 million
                     </strong>
-                        <p class=zoom>Top 50 donors gave:
+                        <p>Top 50 donors gave:
                             <strong>&#163;39,196,684</strong>
                             <br>
                             <strong>92%</strong>of the total.</p>
-                        <p class=zoom>Top 10 donors gave:
+                        <p>Top 10 donors gave:
                             <strong>&#163;34,715,877</strong>
                             <br>
                             <strong>81%</strong>of the total</p>
             </div>
             <div id="libdem">
-                <h5 class=zoom>Liberal Democrats</h5>
-                <strong class=zoom>Total: &#163;7.1 million
+                <h5>Liberal Democrats</h5>
+                <strong>Total: &#163;7.1 million
                     </strong>
-                        <p class=zoom>Top 50 donors gave:
+                        <p>Top 50 donors gave:
                             <strong>&#163;6,975,973</strong>
                             <br>
                             <strong>63%</strong>of the total.</p>
-                        <p class=zoom>Top 10 donors gave:
+                        <p>Top 10 donors gave:
                             <strong>&#163;4,823,899.71</strong>
                             <br>
                             <strong>43%</strong>of the total</p>
@@ -164,76 +162,49 @@
         </div>
         <div id="view-donor-type">
             <div id="individual">
-                <h5 class=zoom>Individuals</h5>
-                <strong class=zoom>Total: &#163; 35,191,222
+                <h5>Individuals</h5>
+                <strong>Total: &#163; 35,191,222
                     </strong>
-                        <p class=zoom>Proportion of all donations:
+                        <p>Proportion of all donations:
                             <strong>39%</strong>
                         </p>
             </div>
             <div id="company">
-                <h5 class=zoom>Companies</h5>
-                <strong class=zoom>Total: &#163; 17,052,129
+                <h5>Companies</h5>
+                <strong>Total: &#163; 17,052,129
                     </strong>
-                        <p class=zoom>Proportion of all donations:
+                        <p>Proportion of all donations:
                             <strong>19%</strong>
                         </p>
             </div>
             <div id="union">
-                <h5 class=zoom>Trade Unions</h5>
-                <strong class=zoom>Total: &#163;31,474,649
+                <h5>Trade Unions</h5>
+                <strong>Total: &#163;31,474,649
                     </strong>
-                        <p class=zoom>Proportion of all donations:
+                        <p>Proportion of all donations:
                             <strong>35%</strong>
                         </p>
             </div>
             <div id="society">
-                <h5 class=zoom>Societies</h5>
-                <strong class=zoom>Total: &#163;4,550,129
+                <h5>Societies</h5>
+                <strong>Total: &#163;4,550,129
                     </strong>
-                        <p class=zoom>Proportion of all donations:
+                        <p>Proportion of all donations:
                             <strong>5%</strong>
                         </p>
             </div>
             <div id="other">
-                <h5 class=zoom>Others</h5>
-                <strong class=zoom>Total: &#163; 1,484,395
+                <h5>Others</h5>
+                <strong>Total: &#163; 1,484,395
                     </strong>
-                        <p class=zoom>Proportion of all donations:
+                        <p>Proportion of all donations:
                             <strong>2%</strong>
                         </p>
             </div>
         </div>
-        <!--<div id = "view-by-amount">
-         <div id="enormous">
-                <h5 class=zoom> Amounts less than 20.000.000 pounds </h5>
-           </div>  
-        <div id="huge">
-                <h5 class=zoom> Amounts less than 500.000 pounds </h5>
-         </div>
-         <div id="large">
-               <h5 class=zoom> Amounts less than 100.000 pounds </h5>
-         </div>
-        </div>-->
     </div>
     <div id="chart"></div>
 
-    <style type="text/css">
-   .zoom {
-   -webkit-transition: all .3s ease-out;
-   -moz-transition: all .3s ease-out;
-   -o-transition: all .3s ease-out;
-   transition: all .3s ease-out;
-   }
-   .zoom:hover {
-   -moz-transform: scale(1.6);
-   -webkit-transform: scale(1.6);
-   -o-transform: scale(1.6);
-   transform: scale(1.6);
-   -ms-transform: scale(1.6);
-   filter: progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand',
-   M11=2, M12=-0, M21=0, M22=2);}
-   </style>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
