--- a/index.html
+++ b/index.html
@@ -214,4 +214,21 @@
     <script src="chart.js"></script>
 </body>
 
+<style type="text/css"> /*zoom function*/    
+.zoom {
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+    transition: all .3s ease-out;
+}
+.zoom:hover {
+    -moz-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -o-transform: scale(1.5);
+    transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    filter: progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=2, M12=-0, M21=0, M22=2);
+}
+</style>
+    
 </html>
