--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </li>
             <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-donor-type"> <p class=zoom> Split by type of donor</p> </a>
             </li>
-            <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by Amount</p> </a>
+          <!--  <li><a href="#" onmousedown="button_sound.play()" role="button" class="pure-button switch" id="group-by-amount"> <p class=zoom> Split by Amount</p> </a>
             </li> <!--new group by type^-->
         </ul>
     </nav>
