--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 
     <div id="annotations">
-
+        <div id = "cssImg">  </div>
         <!-- Initial annotations -->
         <div id="initial-content">
             <h2 class=zoom>Political donations and funding accepted by the Conservatives, Labour and Liberal Democrats between the 2010 general election and August 2013, when this data was collected.</h2>
